[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aniemore"
version = "1.1.1"
authors = [
    "Ilya Lubenets <lii291001@gmail.com>",
    "Nikita Davidchuk <ar4ikov228@gmail.com>",
    "Artem Amentes <artem@socialcode.ru>",
]
maintainers = [
    "Ilya Lubenets <lii291001@gmail.com>",
    "Nikita Davidchuk <ar4ikov228@gmail.com>",
]
license = "MIT"
description = "Aniemore (Artem Nikita Ilya EMOtion REcognition) is a library for emotion recognition in voice and text for russian language."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Environment :: GPU :: NVIDIA CUDA",

]

[tool.poetry.urls]
"Repository" = "https://github.com/aniemore/Aniemore"
"Bug Tracker" = "https://github.com/aniemore/Aniemore/issues"
"Hugging Face Homepage" = "https://huggingface.co/Aniemore"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
transformers = "^4.26.1"
numpy = "^1.24.2"
openai-whisper = "^20230124"
datasets = "^2.9.0"
torch = { version = "^2.0.0", source = 'pytorch' }
torchaudio = { version = "^2.0.1", source = 'pytorch' }
soundfile = {version = "^0.12.1", platform = "win32"}
sox = [
    {version = "^1.4.1", platform =  "linux" },
    {version = "^1.4.1", platform =  "darwin" }
]
ffmpeg-python = "^0.2.0"
typing-extensions = "^4.5.0"
wheel = "^0.38.4"
setuptools = "^67.5.1"
pip = "^23.0.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
default = false
secondary = true

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.pytest.ini_options]
pythonpath = [
".", "aniemore",
]
